<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/menu_01_item01"
        android:title="@string/menu_01_item1"
		android:showAsAction="always">
		<menu
			android:id="@+id/menu_01_item01_submenu">			
			<item
				android:title="@string/friendly">
				<menu>
				</menu>
			</item>
			<item
				android:title="@string/hate">
				<menu>
				</menu>
			</item>
			<item
				android:title="@string/none">
				<menu>
				</menu>
			</item>
		</menu>
	</item>
    <item
        android:id="@+id/menu_01_item02"
        android:title="@string/menu_01_item2">
		<menu
			android:id="@+id/menu_01_item02_submenu">			
		</menu>
	</item>
    <item
        android:id="@+id/menu_01_item03"
        android:title="@string/menu_01_item3">
		<menu
			android:id="@+id/menu_01_item03_submenu">			
		</menu>
	</item>
	<item
        android:id="@+id/menu_01_item04"
        android:title="@string/menu_01_item4">
		<menu
			android:id="@+id/menu_01_item01_submenu">			
			<item
				android:title="@string/jjdudge_white">
				<menu>
				</menu>
			</item>
			<item
				android:title="@string/jjdudge_black">
				<menu>
				</menu>
			</item>
			<item
				android:title="@string/jjdudge_none">
				<menu>
				</menu>
			</item>
		</menu>
	</item>
	
</menu>
